[gd_scene load_steps=7 format=2]

[ext_resource path="res://client/lobby/LobbyState.gd" type="Script" id=1]
[ext_resource path="res://common/MenuBackground.tscn" type="PackedScene" id=2]
[ext_resource path="res://common/MenuPanel.tscn" type="PackedScene" id=3]
[ext_resource path="res://common/LobbyPlayer.tscn" type="PackedScene" id=4]
[ext_resource path="res://common/LoadingLabel.tscn" type="PackedScene" id=6]
[ext_resource path="res://common/Camera2D.tscn" type="PackedScene" id=7]

[node name="LobbyState" type="Node2D"]
script = ExtResource( 1 )

[node name="Camera2D" parent="." instance=ExtResource( 7 )]

[node name="UICanvasLayer" type="CanvasLayer" parent="."]

[node name="MenuBackground" parent="UICanvasLayer" instance=ExtResource( 2 )]

[node name="MenuPanel" parent="UICanvasLayer" instance=ExtResource( 3 )]

[node name="StartButton" type="Button" parent="UICanvasLayer/MenuPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 370.0
margin_right = -200.0
margin_bottom = -145.0
rect_scale = Vector2( 2, 2 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="UICanvasLayer/MenuPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 460.0
margin_right = -200.0
margin_bottom = -65.0
rect_scale = Vector2( 2, 2 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LobbyPlayer1" parent="UICanvasLayer/MenuPanel" instance=ExtResource( 4 )]
margin_left = 70.0
margin_top = 150.0
margin_right = -150.0
margin_bottom = -380.0

[node name="LobbyPlayer2" parent="UICanvasLayer/MenuPanel" instance=ExtResource( 4 )]
margin_left = 70.0
margin_top = 180.0
margin_right = -150.0
margin_bottom = -350.0

[node name="LobbyPlayer3" parent="UICanvasLayer/MenuPanel" instance=ExtResource( 4 )]
margin_left = 70.0
margin_top = 210.0
margin_right = -150.0
margin_bottom = -320.0

[node name="LobbyPlayer4" parent="UICanvasLayer/MenuPanel" instance=ExtResource( 4 )]
margin_left = 70.0
margin_top = 240.0
margin_right = -150.0
margin_bottom = -290.0

[node name="LobbyPlayer5" parent="UICanvasLayer/MenuPanel" instance=ExtResource( 4 )]
margin_left = 70.0
margin_top = 270.0
margin_right = -150.0
margin_bottom = -260.0

[node name="LobbyPlayer6" parent="UICanvasLayer/MenuPanel" instance=ExtResource( 4 )]
margin_left = 70.0
margin_top = 300.0
margin_right = -150.0
margin_bottom = -230.0

[node name="LoadingIndicator" parent="UICanvasLayer" instance=ExtResource( 6 )]
